--- a/angular.json
+++ b/angular.json
@@ -108,7 +108,10 @@
           }
         },
         "deploy": {
-          "builder": "angular-cli-ghpages:deploy"
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "baseHref": "/AniPointWeb/"
+          }
         }
       }
     }
