--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
+    "@angular/localize": "~13.3.0",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.0.1",
+    "@popperjs/core": "^2.10.2",
+    "apollo-angular": "^3.0.0",
+    "bootstrap": "^5.1.3",
     "pptxgenjs": "^3.9.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
