--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.0",
+    "@angular/cdk": "^13.3.2",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
@@ -19,10 +20,13 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@msgpack/msgpack": "^2.7.2",
     "@ng-bootstrap/ng-bootstrap": "^12.0.1",
     "@popperjs/core": "^2.10.2",
     "apollo-angular": "^3.0.0",
+    "base2048": "^2.0.2",
     "bootstrap": "^5.1.3",
+    "js-base64": "^3.7.2",
     "pptxgenjs": "^3.9.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
